--- a/HelloGitHubProject/app/src/main/res/layout/activity_main.xml
+++ b/HelloGitHubProject/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,17 @@
 
     <TextView android:text="Hello Git Project" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
-/>
+        android:textColor="#f00"
+        android:id="@+id/textView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click Me"
+        android:onClick="clickMe_onClick"
+        android:id="@+id/btnClickMe"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="119dp" />
 
 </RelativeLayout>
